--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-plugin-vue": "^9.32.0",
     "prettier": "^3.4.2",
     "vite": "^6.0.11",
+    "vite-plugin-pwa": "^0.21.1",
     "vite-plugin-vue-devtools": "^7.7.0"
   }
 }
