added google analytics

--- a/netlify.toml
+++ b/netlify.toml
@@ -5,3 +5,4 @@
   VITE_FIREBASE_STORAGE_BUCKET = "helpmeout-cbbf5.firebasestorage.app"
   VITE_FIREBASE_MESSAGING_SENDER_ID = "907949478310"
   VITE_FIREBASE_APP_ID = "1:907949478310:web:ca50ae28e0d5e39078ff67"
+  VITE_FIREBASE_MEASUREMENT_ID = "G-XFCCMNET4V"
