--- a/netlify.toml
+++ b/netlify.toml
@@ -6,3 +6,4 @@
   VITE_FIREBASE_MESSAGING_SENDER_ID = "907949478310"
   VITE_FIREBASE_APP_ID = "1:907949478310:web:ca50ae28e0d5e39078ff67"
   VITE_FIREBASE_MEASUREMENT_ID = "G-XFCCMNET4V"
+  VITE_ASSEMBLY_API_KEY = "1bcd183ffc084379bf81a5ed0c65e5a5"
